# SSCMA-Micro

./: .clang-format  .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  Kconfig  README.md  README_ZH.md  idf_component.yml  idf_componet.yml  sscma_micro.mk
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: build-docs.yml
cmake/: env_custom.cmake  env_esp.cmake
core/: edgelab.h  el_api.h  el_common.h  el_compiler.h  el_config.h  el_config_internal.h  el_debug.h  el_types.h  el_version.h
core/algorithm/: el_algorithm_base.cpp  el_algorithm_base.h  el_algorithm_delegate.cpp  el_algorithm_delegate.h  el_algorithm_fomo.cpp  el_algorithm_fomo.h  el_algorithm_imcls.cpp  el_algorithm_imcls.h  el_algorithm_nvidia_det.cpp  el_algorithm_nvidia_det.h  el_algorithm_pfld.cpp  el_algorithm_pfld.h  el_algorithm_rtmdet.cpp  el_algorithm_rtmdet.h  el_algorithm_yolo.cpp  el_algorithm_yolo.h  el_algorithm_yolo_pose.cpp  el_algorithm_yolo_pose.h  el_algorithm_yolo_world.cpp  el_algorithm_yolo_world.h  el_algorithm_yolov8.cpp  el_algorithm_yolov8.h  test.h
core/data/: el_data_models.cpp  el_data_models.h  el_data_storage.cpp  el_data_storage.hpp
core/engine/: Kconfig  el_engine_base.h  el_engine_tflite.cpp  el_engine_tflite.h
core/synchronize/: el_guard.hpp  el_mutex.hpp
core/utils/: el_base64.cpp  el_base64.h  el_cv.cpp  el_cv.h  el_hash.cpp  el_hash.h  el_nms.cpp  el_nms.h  el_ringbuffer.hpp
docs/: Doxyfile.in  at-protocol-en_US.md  at_protocol.md  doxygen_cfg  porting-guide-zh_CN.md
docs/env_support/cmake/: env_esp.cmake  env_sophgo.cmake
docs/man/man3/: action.hpp.3  algorithm.hpp.3  algorithm_config_helper.hpp.3  board.h.3  boards.h.3  condition.hpp.3  default.hpp.3  definations.hpp.3  edgelab.3  edgelab_AlgorithmDelegate.3  edgelab_AlgorithmFOMO.3  edgelab_AlgorithmIMCLS.3  edgelab_AlgorithmPFLD.3  edgelab_AlgorithmYOLO.3  edgelab_Camera.3  edgelab_CameraEsp.3  edgelab_Device.3  edgelab_DeviceEsp.3  edgelab_Display.3  edgelab_DisplayEsp.3  edgelab_EngineTFLite.3  edgelab_Guard.3  edgelab_Models.3  edgelab_Mutex.3  edgelab_Serial.3  edgelab_SerialEsp.3  edgelab_Storage.3  edgelab_Storage_Iterator.3  edgelab_Transport.3  edgelab_base.3  edgelab_base_Algorithm.3  edgelab_base_Engine.3  edgelab_constants.3  edgelab_types.3  edgelab_types_b16_t.3  edgelab_types_b24_t.3  edgelab_types_el_algorithm_info_t.3  (+118 more)
docs/porting/: porting-guide-en_US.md
docs/protocol/: at-protocol-en_US.md  at_protocol.md
env_support/cmake/: env_custom.cmake  env_esp.cmake  env_posix.cmake  env_sg200x.cmake  env_sophgo.cmake
env_support/mk/: env_himax_we2.mk  env_sg200x.mk
porting/: Kconfig  el_camera.h  el_device.h  el_display.h  el_extfs.h  el_flash.h  el_misc.h  el_network.h  el_serial.h  el_sspi.h  el_transport.h  el_wire.h
porting/espressif/: Kconfig  el_board_config.h  el_camera_esp.cpp  el_camera_esp.h  el_config_porting.h  el_device_esp.cpp  el_device_esp.h  el_display_esp.cpp  el_display_esp.h  el_flash_esp.cpp  el_flash_esp.h  el_misc.cpp  el_misc_esp.cpp  el_network_esp.cpp  el_network_esp.h  el_serial_esp.cpp  el_serial_esp.h
porting/himax/: el_board_config.h  el_camera_himax.cpp  el_camera_himax.h  el_device_himax.cpp  el_device_himax.h  el_flash_himax.cpp  el_flash_himax.h  el_misc_himax.cpp  el_serial_himax.cpp  el_serial_himax.h
porting/we1/: el_board_config.h  el_camera_hm0360.cpp  el_camera_hm0360.h  el_device_we1.cpp  el_device_we1.h  el_flash_we1.cpp  el_misc_we1.cpp  el_serial_we1.cpp
scripts/: fetch_eigen.sh  fetch_libhv.sh  fetch_littlefs.sh  fetch_tflite_micro.sh
sscma/: definations.hpp  hooks.hpp  main_task.hpp  prototypes.hpp  sscma.h  static_resource.hpp  static_resourse.hpp  traits.hpp  types.hpp  utility.hpp
sscma/callback/: action.hpp  algorithm.hpp  common.hpp  default.hpp  info.hpp  invoke.hpp  kv.hpp  model.hpp  mqtt.hpp  network.hpp  sample.hpp  sensor.hpp  wifi.hpp
sscma/client/: ma_client.h  ma_client_at.cpp  ma_client_at.h
sscma/core/: ma_common.h  ma_compiler.h  ma_config_internal.h  ma_core.h  ma_ctypes.h  ma_debug.h  ma_definations.h  ma_exception.h  ma_types.h  ma_version.h
sscma/extension/: mqtt_transport.hpp  mux_transport.hpp  network_supervisor.hpp
sscma/interface/: wifi.hpp
sscma/interpreter/: condition.hpp  lexer.hpp  literals.hpp  nodes.hpp  parser.hpp  types.hpp  utility.hpp
sscma/porting/: ma_camera.h  ma_device.h  ma_misc.h  ma_osal.h  ma_porting.h  ma_sensor.h  ma_storage.h  ma_storage_lfs.cpp  ma_storage_lfs.h  ma_transport.h
sscma/repl/: executor.hpp  history.hpp  server.hpp  supervisor.hpp
sscma/server/: ma_server.h  ma_server_at.cpp  ma_server_at.h  ma_static_resource.cpp  ma_static_resource.h
test/: CMakeLists.txt  img_meter.h  img_mnist.h  ma_config.h  test_codec.cpp  test_data.cpp  test_engine.cpp  test_main.cpp  test_model.cpp  test_os.cpp  test_pipeline.cpp  test_server.cpp  test_storage.cpp
test/core/: CMakeLists.txt  img_meter.h  ma_config.h  mnist.tflite  test_data.cpp  test_model.cpp  test_os.cpp
test/extension/: CMakeLists.txt  test_bytetrack.cpp
test/extension/test_data/: raw_out_0.npy  raw_out_1.npy  raw_out_2.npy  raw_out_3.npy  raw_out_4.npy  raw_out_5.npy  raw_out_6.npy  raw_out_7.npy  raw_out_8.npy  raw_out_9.npy  tracked_out_0.npy  tracked_out_1.npy  tracked_out_2.npy  tracked_out_3.npy  tracked_out_4.npy  tracked_out_5.npy  tracked_out_6.npy  tracked_out_7.npy  tracked_out_8.npy  tracked_out_9.npy
test/filesystem/: CMakeLists.txt  test_littlefs_filebd.cpp  test_littlefs_rambd.cpp
test/math/: CMakeLists.txt  test_scalars.cpp  test_vectors.cpp
test/misc/: CMakeLists.txt  test_eigen3.cpp
test/model/: CMakeLists.txt  test_yolo_world.cpp
test/nodered/: CMakeLists.txt  main.cpp  test.json
test/nodered/node/: camera.cpp  camera.h  executor.hpp  model.cpp  model.h  node.cpp  node.h  save.cpp  save.h  server.cpp  server.h  stream.cpp  stream.h
test/porting/posix/: CMakeLists.txt  test_storage_lfs.cpp
test/utils/: CMakeLists.txt  test_anchors.cpp  test_nms.cpp
test/utils/test_data/: nms_bboxes.npy  nms_bboxes_single_target.npy  random_bboxes.npy
(+302 files in other folders)
